# hacks

./: README.md
500-lines/: README.md
500-lines/ci/: .gitignore  README.md
binstaller/: Cargo.toml
binstaller/src/: main.rs
build-a-simple-database/: .gitignore  .indent.pro  Gemfile  Makefile  btree.c  btree.h  command.c  command.h  constants.c  constants.h  cursor.c  cursor.h  db.c  db.h  input_buffer.c  input_buffer.h  main.c  meta.c  meta.h  pager.c  pager.h  repl.c  statement.c  statement.h  table.c  table.h
build-a-simple-database/spec/: main_spec.rb
concurrency-in-go/: README.md
ctools/: .build.yml  .editorconfig  README.md  STATUS  STYLE  meson.build  meson_options.txt
ctools/doc/: basename.1.scd  cat.1.scd  chgrp.1.scd  chmod.1.scd  chown.1.scd  cksum.1.scd  cmp.1.scd  comm.1.scd  ctools.7.scd  dirname.1.scd  env.1.scd  false.1.scd  head.1.scd  link.1.scd  logname.1.scd  meson.build  nice.1.scd  rmdir.1.scd  sleep.1.scd  true.1.scd  tty.1.scd  uname.1.scd  unlink.1.scd
ctools/src/: basename.c  cat.c  chgrp.c  chmod.c  chown.c  cksum.c  cmp.c  comm.c  dirname.c  env.c  false.c  head.c  link.c  logname.c  nice.c  rmdir.c  sleep.c  tty.c  uname.c  unlink.c
ctools/test/: basename  cat  chgrp  chmod  chown  cksum  cmp  comm  dirname  env  false  harness.sh  head  link  logname  meson.build  nice  rmdir  sleep  true  tty  uname  unlink
data-science-from-scratch/: .gitignore  README.md  pyproject.toml
data-science-from-scratch/chapter-10/: tqdm-example.py
data-science-from-scratch/chapter-12/: iris-scipy.py  iris.py
data-science-from-scratch/chapter-13/: download-data.py  naive-bayes-scikit.py
data-science-from-scratch/chapter-14/: simple-scipy.py
data-science-from-scratch/chapter-16/: svc-sklearn.py
data-science-from-scratch/chapter-17/: decision-tree-sklearn.py
data-science-from-scratch/chapter-18/: neutral-net-scikit-learn.py
data-science-from-scratch/chapter-19/: pickle-model.py
data-science-from-scratch/chapter-20/: image-manipulation.py
data-science-from-scratch/chapter-22/: networkx-example.py
data-science-from-scratch/chapter-23/: surprise-demo.py
data-science-from-scratch/chapter-6/: conditional_probability.py
data-science-from-scratch/chapter-7/: p_value.py
data-science-from-scratch/chapter-8/: estimating_gradient.py  fitting_models_via_gradient_descent.py  gradient_descent_scipy.py  using_gradient.py
deb-scratch/: Makefile  README.md
deploy-vault/: Makefile  README.md  goss.yaml  install.sh  packer.json
deploy-vault/packer/: .gitignore  Makefile  README.md  amazon-ebs-vault.hcl  base.sh  goss.yaml  install.sh  packer.json  vagrant-vault.hcl
deploy-vault/terraform/: README.md  _draft.tf  main.tf  provider.tf  user_data.sh
diesel_demo/: Cargo.toml  README.md
diesel_demo/src/: lib.rs  models.rs
go-codewalk-sharemem/: README.md  go.mod  main.go
go-context/: README.md  go.mod
go-context/client/: main.go
go-context/server/: main.go
go-grpc/: Makefile  README.md  go.mod  go.sum
go-grpc/api/: api.proto  handler.go
go-grpc/client/: main.go
go-grpc/server/: main.go
go-in-practice/: README.md
go-in-practice/chapter1/: channel.go  http_get.go  read_status.go  server.go
go-in-practice/chapter2/: flag_cli.go  multiple_handlers.go
go-in-practice/chapter3/: close_channel.go  gosched.go  locking_with_channels.go  multiple_channels.go  mutex.go  wait.go
go-in-practice/chapter4/: echo.go
go-mtls/: README.md  client.go  clientCert.pem  clientKey.pem  client_no_mtls.go  server.go  serverCert.pem  serverKey.pem
go-timeout/: go.mod  main.go
go-todoist/: go.mod  main.go
gobenchmarktesting/: README.md  go.mod  lib.go  lib_test.go
gochannels/: README.md  go.mod  main.go
gololcat/: .gitignore  Makefile  README.md  go.mod  go.sum  main.go
grrs/: Cargo.toml
grrs/src/: main.rs
hands-on-machine-learning/: pyproject.toml
hands-on-machine-learning/handson-ml2/: 01_the_machine_learning_landscape.ipynb  02_end_to_end_machine_learning_project.ipynb  requirements.txt
hands-on-machine-learning/notebooks/: classification.ipynb  housing.ipynb
kafka/: README.md  go.mod  go.sum
learning-spark-v2/: README.md  Vagrantfile
packer-demo/: README.md  packer.json  provision.sh
piston/roguelike/: Cargo.toml
piston/roguelike/src/: main.rs
py-git-diff-clone/: README.md  main.py
rocket_pastebin_demo/: Cargo.toml  README.md
rocket_pastebin_demo/src/: lib.rs  paste_id.rs
rust-actix/: Cargo.toml
rust-bazel/: README.md
rust-docker/: Cargo.toml  README.md
rust-mytodo/: .env  Cargo.toml  README.md
rust-mytodo/backend/: Cargo.toml
rust-mytodo/backend/src/db/: models.rs  schema.rs
rust-mytodo/frontend/: Cargo.toml
rust-mytodo/frontend/src/: lib.rs
rust-mytodo/migrations/2019-09-05-140616_task/: up.sql
rust-mytodo/src/: lib.rs
rust-mytodo/src/db/: mod.rs  models.rs
rust-programming-language-book/: README.md
sicp/: README.md  chapter1.scm
terratest-example/: README.md  go.mod  go.sum
traefik-demo/: README.md  docker-compose.yml
vectors/: Cargo.toml
what-to-do/: Makefile  README.md
wireguard-demo/: README.md  Vagrantfile
writing-a-compiler-in-go/: README.md
writing-a-compiler-in-go/src/monkey/: BUILD.bazel  Makefile  README.md  WORKSPACE
writing-a-compiler-in-go/src/monkey/ast/: BUILD.bazel
writing-a-compiler-in-go/src/monkey/benchmark/: BUILD.bazel
writing-a-compiler-in-go/src/monkey/code/: BUILD.bazel  code.go  code_test.go
writing-a-compiler-in-go/src/monkey/compiler/: BUILD.bazel  compiler.go  compiler_test.go  symbol_table.go  symbol_table_test.go
writing-a-compiler-in-go/src/monkey/evaluator/: BUILD.bazel
writing-a-compiler-in-go/src/monkey/lexer/: BUILD.bazel
writing-a-compiler-in-go/src/monkey/object/: BUILD.bazel  builtins.go  object.go
writing-a-compiler-in-go/src/monkey/parser/: BUILD.bazel
writing-a-compiler-in-go/src/monkey/repl/: BUILD.bazel  repl.go
writing-a-compiler-in-go/src/monkey/token/: BUILD.bazel
writing-a-compiler-in-go/src/monkey/vm/: BUILD.bazel  vm.go  vm_test.go
writing-an-interpreter-in-go/: README.md
(+171 files in other folders)
