[package]
name = "binstaller"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
tar = { version = "0.4.37" }
tempfile = { version = "3.2.0" }
xz2 = "0.1"
