[package]
name = "binstaller"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quicli = "0.4"
reqwest = { version = "0.11", features = ["blocking"] }
structopt = "0.2"
tar = { version = "0.4.37" }
tempfile = { version = "3.2.0" }
xz2 = "0.1"
