[tool.poetry]
name = "data-science-from-scratch"
version = "0.1.0"
description = ""
authors = ["mattjmcnaughton <mattjmcnaughton@gmail.com>"]
license = "Apache"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
ipython = "^7.29.0"
numpy = "^1.21.4"
scipy = "^1.7.3"
matplotlib = "^3.5.0"
PyQt5 = "^5.15.6"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
