[tool.poetry]
name = "homl"
version = "0.1.0"
description = ""
authors = ["mattjmcnaughton <mattjmcnaughton@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
jupyter = "^1.0.0"
scikit-learn = "^1.0.2"
tensorflow = "^2.7.1"
matplotlib = "^3.5.1"
numpy = "^1.22.1"
pandas = "^1.3.5"
scipy = "^1.7.3"
joblib = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
