[package]
name = "rocket_pastebin_demo"
version = "0.1.0"
authors = ["mattjmcnaughton <mattjmcnaughton@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.6.5"
rocket = "0.4.1"
rocket_contrib = "0.4.1"
reqwest = "0.9.17"
