# Note to self, at least as of 2020-11-28, this code works with Rust Stable
# 1.46.0, but not Rust Stable 1.48.0.

[package]
name = "roguelike"
version = "0.1.0"
authors = ["mattjmcnaughton <mattjmcnaughton@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.52.1"
piston2d-graphics = "0.39.0"
piston2d-opengl_graphics = "0.76.0"
pistoncore-glutin_window = "0.67.1"
