[package]
name = "backend"
version = "0.1.0"
authors = ["mattjmcnaughton <mattjmcnaughton@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mytodo = { path = ".." }
diesel = { version = "1.4.6", features = ["postgres"] }
dotenv = "0.9.0"
rocket = "0.4.2"
rocket_cors = { version = "0.5.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]
