load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

# gazelle:prefix monkey
gazelle(
    name = "gazelle",
)

buildifier(
    name = "buildifier",
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "monkey",
    visibility = ["//visibility:private"],
    deps = ["//repl:go_default_library"],
)

go_binary(
    name = "monkey",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "monkey_image",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

alias(
    name = "main",
    actual = ":monkey",
)

alias(
    name = "benchmark",
    actual = "//benchmark:benchmark",
)
