load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["ast.go"],
    importpath = "monkey/ast",
    visibility = ["//visibility:public"],
    deps = ["//token:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["ast_test.go"],
    embed = [":go_default_library"],
    deps = ["//token:go_default_library"],
)
