load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "compiler.go",
        "symbol_table.go",
    ],
    importpath = "monkey/compiler",
    visibility = ["//visibility:public"],
    deps = [
        "//ast:go_default_library",
        "//code:go_default_library",
        "//object:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "compiler_test.go",
        "symbol_table_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//ast:go_default_library",
        "//code:go_default_library",
        "//lexer:go_default_library",
        "//object:go_default_library",
        "//parser:go_default_library",
    ],
)
