load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "builtins.go",
        "evaluator.go",
    ],
    importpath = "monkey/evaluator",
    visibility = ["//visibility:public"],
    deps = [
        "//ast:go_default_library",
        "//object:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["evaluator_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//lexer:go_default_library",
        "//object:go_default_library",
        "//parser:go_default_library",
    ],
)
