load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["lexer.go"],
    importpath = "monkey/lexer",
    visibility = ["//visibility:public"],
    deps = ["//token:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["lexer_test.go"],
    embed = [":go_default_library"],
    deps = ["//token:go_default_library"],
)
