load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "environment.go",
        "object.go",
    ],
    importpath = "monkey/object",
    visibility = ["//visibility:public"],
    deps = [
        "//ast:go_default_library",
        "//code:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["object_test.go"],
    embed = [":go_default_library"],
)
